# PortfolioVisualizer-API-Replit

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_old.txt
StockData/: AMEX.json  NASDAQ.json  NYSE.json  TopTicker.json  allStock.json  simpleStockList.json
data/: BacktestTableColumnsInfo.json  expected_results_2.json  metric_groups.json  metric_info.json  portfolios.json  result_metadata.json
handleAPI/: backtester.py
static/: index.html
static/js/: main.e03024.bundle.js  main.e03024.bundle.js.LICENSE.txt
