[tool.poetry]
name = "repl_nix_PortfolioVisualizer-Replit-API"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bt = "^0.2.9"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
pandas = "^1.5.3"
waitress = "^2.1.2"
yfinance = "^0.2.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
